# moosefs-patches

./: .gitignore  AGENTS.md  HANDOVER.md  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
extended/: .gitignore
extended/mfs-direct-rs/: ARCHITECTURE.md  Cargo.toml  IPFS_HA_ENV_PLAN.md  PLAN.md  README.md  ROADMAP.md
extended/mfs-direct-rs/examples/: bench.rs  bench_matrix.rs  cgo_bench.go  control_bench.rs  iops.rs  object_bench.rs  smoke.rs
extended/mfs-direct-rs/include/: moosefs_direct.h
extended/mfs-direct-rs/patches/: OOO_WRITE_MODE.md  moosefs-experimental-ooo-write-acks.patch
extended/mfs-direct-rs/src/: client.rs  error.rs  ffi.rs  lib.rs  object.rs  protocol.rs  quic.rs
extended/mfs-kmod-helper-rs/: Cargo.toml
extended/mfs-kmod-helper-rs/src/: ctrl.rs  handler.rs  lib.rs  main.rs  session.rs  wire.rs
extended/test-cluster/benches/: Cargo.toml
extended/test-cluster/benches/src/: main.rs  report.rs  runner.rs  types.rs
extended/test-cluster/benches/src/benchmarks/: concurrent.rs  dir_scale.rs  fsync.rs  large_file.rs  metadata.rs  mixed.rs  mod.rs  random_io.rs  sequential.rs  small_files.rs  util.rs
extended/test-cluster/benches/src/db/: etcd.rs  mod.rs  postgres.rs  sqlite.rs
mfschunkserver/: Makefile.in  hddspacemgr.c  hddspacemgr.h  mainserv.c  masterconn.c
mfsclient/: Makefile.in
mfscommon/: MFSCommunication.h  sockets.c
mfsdata/: Makefile.in  mfschunkserver.cfg.in  mfshdd.cfg
mfsgui/: Makefile.in
mfsmanpages/: Makefile.in  mfschunkserver.cfg.5
mfsmaster/: Makefile.am  Makefile.in  chunks.c  csdb.c  init.h  matoclquic.c  matoclquic.h  matocsserv.c  matocsserv.h  metadata.c
mfsmetalogger/: Makefile.in
mfsmetatools/: Makefile.in
mfsnetdump/: Makefile.in
mfsscripts/: Makefile.in
mfstests/: Makefile.in
systemd/: Makefile.in  moosefs-chunkserver.service  moosefs-chunkserver@.service  moosefs-gui.service  (+5 more)
(+93 files in other folders)
