[package]
name = "moosefs-direct"
version = "0.1.0"
edition = "2021"
description = "Native Rust MooseFS userspace client crate"

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "staticlib", "cdylib"]

[features]
default = []
quic = ["dep:quinn", "dep:rustls", "dep:tokio"]

[dependencies]
crc32fast = "1.5"
memmap2 = "0.9"
md5 = "0.7"
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"], optional = true }
rustls = { version = "0.23", default-features = false, features = ["std", "ring"], optional = true }
tokio = { version = "1.50", features = ["rt", "net", "time", "io-util"], optional = true }
