[package]
name = "mfskmod-helper"
version = "0.1.0"
edition = "2021"
description = "MooseFS kernel module userspace helper daemon (Rust port)"

[dependencies]
log = "0.4"
env_logger = "0.11"
nix = { version = "0.29", features = ["fs", "signal", "process"] }
thiserror = "2"
byteorder = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 2
lto = true
strip = true
