[package]
name = "mfs-bench"
version = "0.1.0"
edition = "2021"
description = "Comprehensive MooseFS benchmark suite — local vs distributed FS comparison"

[[bin]]
name = "mfs-bench"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
tempfile = "3"
nix = { version = "0.29", features = ["fs"] }
libc = "0.2"
comfy-table = "7"
colored = "2"
chrono = "0.4"
csv = "1"

# Database clients
rusqlite = { version = "0.32", features = ["bundled"] }
postgres = "0.19"

# etcd
etcd-client = "0.14"
tokio = { version = "1", features = ["full"] }
